# MetricLib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
metriclib/: data.py  metric.py  report.py
metriclib/metrics/: consistency.py  informativeness.py  measurement_process.py  representativeness.py  timeliness.py
metriclib/util/: util.py
notebooks/: example_chaos.ipynb  example_ptbxl.ipynb
sample-data/: copy.ipynb
sample-data/CHAOS_dataset/: CHAOS_metadatas.csv
sample-data/ptbxl/: ptbxl_subsample.csv
tests/: test_dataset.py  test_metrics.py  test_report.py
