[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metriclib"
version = "0.1.0"
description = "Evaluate data quality metrics on datasets"
dynamic = ["dependencies"]
authors = [{ name = "Martin Seyferth" }]
requires-python = ">=3.9,<3.14"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["metriclib"]
